ascii_codes_figures.yaml: double quotes are needed in yaml

--- a/src/ascii_codes_figures.yaml
+++ b/src/ascii_codes_figures.yaml
@@ -1,6 +1,6 @@
-PAWN: '\u2659'
-ROOK: '\u2656'
-KNIGHT: '\u2658'
-BISHOP: '\u2657'
-QUEEN: '\u2655'
-KING: '\u265A'
+PAWN: "\u2659"
+ROOK: "\u2656"
+KNIGHT: "\u2658"
+BISHOP: "\u2657"
+QUEEN: "\u2655"
+KING: "\u265A"
